Feature/parser enhancement (#96)
* feat(parser): 全面重构账单解析器，增强字段映射与单元测试

解析器改进:
- PingAnParser: 修复列索引错误，增加 Counterparty、Balance、status、RecordRole 字段
- CiticCreditParser: 修复金额列判断，优化交易类型映射，增加 Counterparty 提取和分类
- BocomCreditParser: 重写交易行正则，准确识别 ¥ 符号和金额，新增自动分类
- BocCreditParser: 修复多行记录处理和金额提取逻辑
- CmbParser: 改进对手方解析，增加摘要类型提取
- AlipayParser: 完善 Counterparty、FundSource、RecordRole、分类映射
- WechatParser: 完善 Counterparty、支付方式、资金来源映射
- JingdongParser: 完善 Counterparty、交易状态
- QianjiParser: 完善 Counterparty、AccountType
- CcbParser: 新建，解析建设银行 Excel（序号/摘要/交易日期/金额/余额/对手信息）

所有单元测试:
- 统一使用 resourceExists() guard 模式，文件不存在时友好提示
- 测试资源目录: src/test/resources/mock/（已在 .gitignore 中排除）
- 覆盖所有 10 个解析器，保留文件时执行完整字段验证

其他:
- .gitignore 增加 mock/ 目录排除，防止测试文件泄露